[metadata]
name = metrics
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = A bunch of metrics for image computing
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/metrics

[options]
python_requires = >= 3.6
# we should be able to make all numpy/scipy dependencies optional
install_requires =
    numpy
    scipy
    scikit-learn>=0.15
    scikit-image>=0.18
